ilex/tests/ui/eof/bracket_multiline.stderr
error: expected closing `]`, but found <eof>
 --> eof/bracket_multiline.txt:3:3
  |
3 | ][ 
  |   ^ expected `]` here
  |  - help: previously opened here
  |
  = note: reported at: ilex/src/rt/lexer.rs:311:10

error: aborting due to previous error
